third_party/move/move-compiler-v2/tests/lambda/inline-parity/bug_10991.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::Test {
    private fun foo(f: |(u64, u64)|u64,g: |(u64, u64)|u64,x: u64,_y: u64): u64 {
        Add<u64>((f)(x, _y), (g)(x, _y))
    }
    public fun test() {
        if Eq<u64>(Test::foo(closure#0Test::test$lambda$1(), closure#0Test::test$lambda$2(), 10, 100), 110) {
          Tuple()
        } else {
          Abort(0)
        };
        Tuple()
    }
    private fun test$lambda$1(x: u64,param$1: u64): u64 {
        {
          let _: u64 = param$1;
          x
        }
    }
    private fun test$lambda$2(param$0: u64,y: u64): u64 {
        {
          let _: u64 = param$0;
          y
        }
    }
} // end 0x42::Test

// -- Sourcified model before bytecode pipeline
module 0x42::Test {
    fun foo(f: |(u64, u64)|u64, g: |(u64, u64)|u64, x: u64, _y: u64): u64 {
        f(x, _y) + g(x, _y)
    }
    public fun test() {
        if (foo(|(arg0,arg1)| test$lambda$1(arg0, arg1), |(arg0,arg1)| test$lambda$2(arg0, arg1), 10, 100) == 110) () else abort 0;
    }
    fun test$lambda$1(x: u64, param$1: u64): u64 {
        let _ = param$1;
        x
    }
    fun test$lambda$2(param$0: u64, y: u64): u64 {
        let _ = param$0;
        y
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/bug_10991.move:4:9
  │
4 │         f(x, _y) + g(x, _y)
  │         ^^^^^^^^

error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/bug_10991.move:4:20
  │
4 │         f(x, _y) + g(x, _y)
  │                    ^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/inline-parity/bug_10991.move:8:21
  │
8 │         assert!(foo(|x, _| x, |_, y| y, 10, 100) == 110, 0);
  │                     ^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/inline-parity/bug_10991.move:8:31
  │
8 │         assert!(foo(|x, _| x, |_, y| y, 10, 100) == 110, 0);
  │                               ^^^^^^^^
